fix uneven display of elected in recipient selector #249

--- a/app/assets/stylesheets/modules/data_collection.sass
+++ b/app/assets/stylesheets/modules/data_collection.sass
@@ -64,14 +64,13 @@ body.data_collection
       label
         width: auto
     div.avatar
+      margin:
+        right: 40%
+        bottom: 1em
+        left: 40%
       clear: both
       width: 100px
       float: left
-      margin-bottom: 1em
-      @media (max-width: 420px)
-        margin-left: 33%
-      @media (min-width: 420px)
-        margin-left: 40%
     img
       +border-radius(50%)
     .person-info
